--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
-# Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+# Degreew
+- degree: Full Stack Webdeveloper Nanodegreeww  
+  uni: Udacityw
+  year: June, 2014 &mdash; January, 2015w
+  # awards:w
+  # summary:w
