--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
-# Degreew
-- degree: Full Stack Webdeveloper Nanodegreeww  
-  uni: Udacityw
-  year: June, 2014 &mdash; January, 2015w
-  # awards:w
-  # summary:w
+# Degreewv
+- degree: Full Stack Webdeveloper Nanodegreewwv
+  uni: Udacitywv
+  year: June, 2014 &mdash; January, 2015wv
+  # awards:wv
+  # summary:wv
